Add refactor and tests
